<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<parent>
		<groupId>
			org.springframework.boot
		</groupId>
		<artifactId>
			spring-boot-starter-parent
		</artifactId>
		<version>
			3.5.4
		</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>
		com.moonsystem
	</groupId>
	<artifactId>
		gestion_commerciale
	</artifactId>
	<version>
		0.0.1-SNAPSHOT
	</version>
	<name>
		gestion_commerciale
	</name>
	<description>
		Gestion Commerciale
	</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>
			17
		</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-data-jpa
			</artifactId>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>org.springframework.boot</groupId> -->
		<!-- <artifactId>spring-boot-starter-security</artifactId> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>spring-dotenv</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-web
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				com.microsoft.sqlserver
			</groupId>
			<artifactId>
				mssql-jdbc
			</artifactId>
			<version>
				12.6.1.jre11
			</version>
		</dependency>
		<dependency>
			<groupId>com.cloudinary</groupId>
			<artifactId>cloudinary-http44</artifactId>
			<version>1.31.0</version>
		</dependency>
		<dependency>
			<groupId>
				org.projectlombok
			</groupId>
			<artifactId>
				lombok
			</artifactId>
			<optional>
				true
			</optional>
		</dependency>
		<dependency>
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-pdfbox</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-validation
			</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.1.214</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>
				org.flywaydb
			</groupId>
			<artifactId>
				flyway-core
			</artifactId>
			<version>
				11.7.2
			</version>
		</dependency>
		<dependency>
			<groupId>com.github.librepdf</groupId>
			<artifactId>openpdf</artifactId>
			<version>1.3.30</version>
		</dependency>
		<dependency>
			<groupId>
				org.springdoc
			</groupId>
			<artifactId>
				springdoc-openapi-starter-webmvc-ui
			</artifactId>
			<version>
				2.8.9
			</version>
		</dependency>
		<dependency>
			<groupId>
				javax.validation
			</groupId>
			<artifactId>
				validation-api
			</artifactId>
			<version>
				2.0.1.Final
			</version>
		</dependency>
		

		<!-- <dependency> -->
		<!-- <groupId>org.springframework.security</groupId> -->
		<!-- <artifactId>spring-security-test</artifactId> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>
					org.apache.maven.plugins
				</groupId>
				<artifactId>
					maven-compiler-plugin
				</artifactId>

				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>
					org.springframework.boot
				</groupId>
				<artifactId>
					spring-boot-maven-plugin
				</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>
								org.projectlombok
							</groupId>
							<artifactId>
								lombok
							</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
